# aie-practice

./: .gitignore  README.md  gitignore.txt
eda-cli/: .gitignore  README.md  pyproject.toml
eda-cli/src/eda_cli/: __init__.py  api.py  cli.py  core.py  viz.py
eda-cli/tests/: test_core.py
homeworks/HW01/: HW01.ipynb  README.md
homeworks/HW02/: HW02.ipynb  README.md
homeworks/HW03/: README.md
homeworks/HW03/eda_cli/: README.md  pyproject.toml
homeworks/HW03/eda_cli/src/eda_cli/: cli.py  core.py  viz.py
homeworks/HW03/eda_cli/tests/: test_core.py
homeworks/HW04/: README.md
homeworks/HW04/eda_cli/: pyproject.toml
homeworks/HW05/: HW05.ipynb  README.md
homeworks/HW06/: HW06.ipynb  README.md  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  README.md  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  HW08_09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: report.md  sample_predictions.csv
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  (+1 more)
project/notebooks/: eda_v1.ipynb
(+8 files in other folders)
