[project]
name = "eda_cli"
version = "0.1.0"
description = "Mini CLI tool for EDA"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "typer>=0.9.0",
    "scipy>=1.10.0",
    "pytest>=7.0.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eda_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]